--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ app.db.name=scheduler
 app.db.user=root
 app.db.pass=
 app.db.host=localhost
+app.db.port=3350
 
 app.num.threads=5
 app.check.next.jobs.interval=30
@@ -10,7 +11,7 @@ job.orphaned.after.days=1
 app.phone.missing.clients=true
 app.client.default.port=3232
 
-spring.datasource.url=jdbc:mysql://${app.db.host}/${app.db.name}
+spring.datasource.url=jdbc:mysql://${app.db.host}:${app.db.port}/${app.db.name}
 spring.datasource.username=${app.db.user}
 spring.datasource.password=${app.db.pass}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
