Got refactor compiling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ app.num.threads=5
 app.check.next.jobs.interval=30
 app.check.orphaned.jobs.interval=60
 job.orphaned.after.days=1
+# attempt to contact hosts that are defined in jobs but not registered yet
 app.phone.missing.clients=true
 app.client.default.port=3232
 
@@ -17,13 +18,17 @@ spring.datasource.password=${app.db.pass}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=2
 
-logging.level.com.dapidi.scheduler=INFO
+logging.level.com.dapidi.scheduler=DEBUG
 
 # To show SQL statements and values enable these
-logging.level.org.springframework.jdbc.core.JdbcTemplate=INFO
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 
 zk.host=localhost
 
 spring.profiles.active=production
 
 scheduler.server.http.port=3230
+
+client.list.jobs.url=jobs
+client.list.job.by.uuid.url=jobs
+client.health.url=health
